--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,7 +5,7 @@
 @use "sass:color";
 
 :root {
-  --global-bg-color: #{$white-color};
+  --global-bg-color: #{$blue-color-dark};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
@@ -133,7 +133,7 @@ html[data-theme-setting="dark"] {
   }
 
   #light-toggle-light {
-    display: none;
+    display: none;lo
   }
 
   #back-to-top {
