--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -133,7 +133,7 @@ html[data-theme-setting="dark"] {
   }
 
   #light-toggle-light {
-    display: none;lo
+    display: none;
   }
 
   #back-to-top {
